# test

./: README.md
qtFeatureBgsTest/: .gitignore  CMakeLists.txt  bgslibrary.h  lbp_bgs.cpp  lbp_bgs.h  main.cpp  main_bgs.cpp  main_bgs.h  npe_bgs.cpp  npe_bgs.h  qtFeatureBgsTest.pro  shadowremove.cpp  shadowremove.h  yzbx_cdnetbenchmark.cpp  yzbx_cdnetbenchmark.h  yzbx_config.h  yzbx_frameinput.cpp  yzbx_frameinput.h  yzbx_tracking.cpp  yzbx_tracking.h  yzbx_tracking_short.cpp  yzbx_tracking_short.h  yzbx_utility.cpp  yzbx_utility.h
